# RustAxumMaudSqlite

./: Cargo.toml  app.db  mydb.sqlite
src/: main.rs
static/: App.js
